--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Keeping the SQLite.Interop.dll files from Debug folder solves compilation error
+!SQLite.Interop.dll
